[project]
name = "api-testing-github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
    "pytest<9",
    "pytest-html>=4.2.0",
    "requests>=2.32.5",
    "uuid>=1.30",
]

[dependency-groups]
dev = [
    "pytest-html>=4.2.0",
    "pytest-md-report>=0.7.0",
]
